--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,7 @@
     # Clone a repository including all submodules
     c = clone --recursive
     # Commit all changes
-    ca = !git add -A && git commit -av
+    ca = !git add -A && git commit -a -m
     # Switch to a branch, creating it if necessary
     go = checkout -B
     # Show verbose output about tags, branches or remotes
